<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_results"
        android:text="@string/search_results"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/search_results_top_line"
        android:layout_below="@+id/search_results"
        android:background="?android:attr/listDivider"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/per_page_spinner"
        android:layout_below="@+id/search_results_top_line"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

    </Spinner>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results_table_scroll"
        android:layout_below="@+id/per_page_spinner">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/results_table"
                    android:layout_marginTop="50dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/table_row_titles">

                        <!--<TextView-->
                            <!--android:id="@+id/table_event_name"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/event_name"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_received_at"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/received_at"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_generated_at"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/generated_at"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_log_source"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/log_source_hint"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_source_ip"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/source_ip"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_destination_ip"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/destination_ip"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_username"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/username_hint"-->
                            <!--android:background="@drawable/cell_border"/>-->

                        <!--<TextView-->
                            <!--android:id="@+id/table_protocol"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="10dp"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="@string/table_protocol"-->
                            <!--android:background="@drawable/cell_border"/>-->
                    </TableRow>

                </TableLayout>
    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next"

        android:layout_below="@+id/results_table_scroll"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_button"
        android:text="@string/previous"

        android:layout_below="@+id/results_table_scroll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        />
</RelativeLayout>
